--- a/xll_fre/xll_fre.vcxproj
+++ b/xll_fre/xll_fre.vcxproj
@@ -160,6 +160,9 @@
     <ClCompile Include="xll_fre.cpp" />
     <ClCompile Include="xll_normal.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="hw6.xlsx" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
